# AgentBridge

./: .gitignore  AgentBridge_项目总设计文档_v0.2_多项目多会话指令版.md  README.md  README.zh-CN.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_persistence.py  0002_bot_delivery_records.py  0003_bot_delivery_retry_metadata.py  0004_group_role_bindings.py  0005_approval_policy_overrides.py  0006_bot_delivery_platform_state.py  0007_access_policy_rules.py  0008_semantic_event_query_columns.py  0009_device_identities.py  0010_event_created_at_columns.py  0011_audit_event_query_columns.py  0012_event_payload_search_columns.py  0013_event_consumer_offsets.py
docs/: BOT_INTEGRATION.md  DEVELOPMENT_STATE.md  PROJECT_DESIGN.md
docs/operations/: AUDIT_ARCHIVE_SIGNING.md  CODEX_APP_SERVER_PROXY_SERVICE_MANAGER.md  DATABASE_DEPLOYMENT.md  DEVICE_CERTIFICATE_OPERATIONS.md  MVP_ACCEPTANCE_RUNBOOK.md  PTY_HOST_SERVICE_MANAGER.md  RELEASE_CANDIDATE.md
examples/: minimal_bot.py
tests/: test_acceptance_cli.py  test_agent_adapter_client.py  test_agent_adapter_events.py  test_api.py  test_audit_verify.py  test_bot_client.py  test_bot_gateway.py  test_chat_stream.py  test_claude_hook_deploy.py  test_codex_output.py  test_commands.py  test_commands_status_agent.py  test_console_client.py  test_console_static.py  test_nonebot_plugin.py  test_onebot.py  test_operations_templates.py  test_persistence.py  test_policy.py  test_readiness_cli.py  test_release_cli.py  test_renderer.py  test_terminal_agent.py  test_terminal_daemon.py  test_turn_runner.py
(+43 files in other folders)
