[project]
name = "agentbridge"
version = "0.1.0"
description = "Local programming-agent collaboration control plane for bot-driven group chat workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
agentbridge-api = "agentbridge.api:run"
agentbridge-console = "agentbridge.console_client:run"
agentbridge-terminal-agent = "agentbridge.terminal_daemon:run"
agentbridge-pty-host = "agentbridge.pty_host:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentbridge"]
